	  and get methods removed from the api
	* QDomNodeList is no longer an ArrayList type
	* Added QList<QRgb> as a C# List<uint> type
	* QVariant.Value() and QVariant.FromValue() now work correctly with enums
	* The Enums in properties are now fully qualified with the classname
	* Fixed up the code for the t11 example
	* Added some more CMakeLists.txt files

2007-22-01  Arno Rehn  <arno@arnorehn.de>

	* Updated marshallers to work with generic types

2007-22-01  Richard Dale  <rdale@foton.es>

	* Add QApplicationExtras.cs, QCoreApplicationExtras.cs and QtExtras.cs
	* Fix bug in setting up argv array passed to QApplication constructor
	  pointed out by Arno.
	* Convert to generic types for marshalling QLists, QVectors and QMaps,
	  and use C# List<>s and Dictionary<>s.
	* Convert qint64 and qlonglong to C# longs, and quint64 and qulonglong to
	  C# ulongs.

2007-21-01  Richard Dale  <rdale@foton.es>

	* Split QVariant.cs and QDBusConnectionInterface in two files with partial
	  classes to make customisation easier to maintain.
	* Fixed bugs in the code generation for args with QStrings or QStringLists
	  inside template type.
	* operator methods '<<' and '>>' were being converted to static methods even
	  when the methods couldn't be operator methods in C# and should have been
	  either 'op_read()' or 'op_write()' in which case they should be instance
	  methods.
	* Fixed parsing in for Q_PROPERTY which meant that some methods in 
	  QToolBar.cs were lost.
	* Added a QVariant.FromValue() method
	* Removed QTextCodecPlugin.cs
	* Fixed build error in QSysInfo.cs

2007-17-01  Arno Rehn  <arno@arnorehn.de>

	* Split SmokeInvocation.cs into SmokeInvocation.cs and SmokeMarshallers.cs
	* Updated CMakeLists.txt to work with more variables

2007-16-01  Richard Dale  <rdale@foton.es>

	* Added missing QX11EmbedContainer and QX11EmbedWidget classes

2007-15-01  Richard Dale  <rdale@foton.es>

	* Change the names of the methods that setup callbacks from